# finl_charsub

./: Cargo.toml  README.md
benches/: hash_testing.rs
resources/: chinese-sample.txt  sample.tex  tex.charsub
src/: charsub.rs  lib.rs  unescape.rs
src/finl/: charsub.rs  mod.rs
